Update and rename 2020-03-23-post.md to 2020-03-23-board.md

--- a/Board/2020-03-23-board.md
+++ b/Board/2020-03-23-board.md
@@ -1,8 +1,10 @@
 
-## 0318 잡담
+## 0323 잡담
 
 > [=>게시판 목록](https://greeense.github.io/Board/board_reademe.html)
 
 > [=>메인](https://greeense.github.io/)
 
 -----------------------------------------------------
+
+> [필수 IT용어](https://sellerteam.tistory.com/entry/IT%EC%9A%A9%EC%96%B4-IT%EC%9A%A9%EC%96%B4%EA%B3%B5%EB%B6%80-AZ-%EA%B9%8C%EC%A7%80)
